[gd_scene load_steps=11 format=3 uid="uid://c65vvfmo6a0fc"]

[ext_resource type="Script" path="res://Scripts/level_boss_2.gd" id="1_5bslc"]
[ext_resource type="PackedScene" uid="uid://b5arstllfey57" path="res://Scenes/parallax_background_boss2.tscn" id="1_8qix1"]
[ext_resource type="PackedScene" uid="uid://bhci4pd85xqr4" path="res://Scenes/groznui_fait.tscn" id="2_th20g"]
[ext_resource type="PackedScene" uid="uid://c4moer1nekytc" path="res://Scenes/health_groznogo.tscn" id="3_hip6t"]
[ext_resource type="PackedScene" uid="uid://n26qp7umoxhm" path="res://Scenes/vodanoy.tscn" id="5_82m57"]
[ext_resource type="PackedScene" uid="uid://b7o62smjwnem2" path="res://UI/pause_menu.tscn" id="6_18smw"]
[ext_resource type="PackedScene" uid="uid://ytvvk5mt5t02" path="res://UI/lose_menu.tscn" id="7_ogvh6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dq7qm"]
size = Vector2(3044, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ap80p"]
size = Vector2(34, 613)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5h83"]
size = Vector2(67, 606)

[node name="Level_boss_2" type="Node2D"]
script = ExtResource("1_5bslc")

[node name="ParallaxBackground" parent="." instance=ExtResource("1_8qix1")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 513

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1524, 620.5)
shape = SubResource("RectangleShape2D_dq7qm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-15, 296.5)
shape = SubResource("RectangleShape2D_ap80p")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(3014, 293)
shape = SubResource("RectangleShape2D_s5h83")

[node name="GroznuiFait" parent="." instance=ExtResource("2_th20g")]
position = Vector2(1057, 495)

[node name="Health" parent="." instance=ExtResource("3_hip6t")]

[node name="HealthBar" parent="Health" index="0"]
tint_over = Color(0.882353, 0.709804, 0.258824, 1)
tint_progress = Color(0.85549, 0, 0.0663113, 1)

[node name="Vodanoy" parent="." instance=ExtResource("5_82m57")]
position = Vector2(1523, 478)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("6_18smw")]

[node name="LoseMenu" parent="CanvasLayer" instance=ExtResource("7_ogvh6")]
process_mode = 2
visible = false

[connection signal="change_health" from="GroznuiFait" to="." method="_on_groznui_fait_change_health"]

[editable path="Health"]
